--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/platform-browser": "^20.1.0",
     "@angular/common": "^20.1.0",
     "@supabase/supabase-js": "2",
+    "@google/genai": "latest",
     "uuid": "^11.1.0",
     "@angular/build": "^20.1.0",
     "@angular/cli": "^20.1.0",
