--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/compiler": "^20.1.0",
     "@angular/platform-browser": "^20.1.0",
     "@angular/common": "^20.1.0",
+    "@angular/forms": "^20.1.6-0",
     "@supabase/supabase-js": "2",
     "@google/genai": "latest",
     "uuid": "^11.1.0",
