feat: Enhance table layout management
Introduces the ability to edit table numbers directly within the layout view. This improves the user experience for customizing table arrangements. Also refactors component structure for better readability and separation of concerns.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sistema-de-gestão-de-restaurantes",
+  "name": "copy-of-sistema-de-gestão-de-restaurantes",
   "private": true,
   "version": "0.0.0",
   "type": "module",
