--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-sistema-de-gestão-de-restaurantes",
+  "name": "sistema-de-gestão-de-restaurantes",
   "private": true,
   "version": "0.0.0",
   "type": "module",
