--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@supabase/supabase-js": "2",
     "@google/genai": "latest",
     "uuid": "^11.1.0",
+    "crypto": "^1.0.1",
+    "@vercel/node": "^5.3.22",
     "@angular/build": "^20.1.0",
     "@angular/cli": "^20.1.0",
     "@angular/compiler-cli": "^20.1.0",
