--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "uuid": "^11.1.0",
     "crypto": "^1.0.1",
     "@vercel/node": "^5.3.22",
+    "buffer": "^6.0.3",
     "@angular/build": "^20.1.0",
     "@angular/cli": "^20.1.0",
     "@angular/compiler-cli": "^20.1.0",
