refactor: Rename project to "sistema principal"
Update the project name in package.json and metadata.json from "Sistema de Gestão de Restaurantes" to "sistema principal" to align with the application's primary identifier.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sistema-de-gestão-de-restaurantes",
+  "name": "sistema-principal",
   "private": true,
   "version": "0.0.0",
   "type": "module",
