--- a/package.json
+++ b/package.json
@@ -9,23 +9,24 @@
     "preview": "ng serve --configuration=production"
   },
   "dependencies": {
-    "rxjs": "^7.8.2",
-    "@angular/core": "^20.1.0",
-    "@angular/router": "^20.1.6-0",
-    "@angular/compiler": "^20.1.0",
-    "@angular/platform-browser": "^20.1.0",
+    "@angular/build": "^20.1.0",
+    "@angular/cdk": "^20.2.5",
+    "@angular/cli": "^20.1.0",
     "@angular/common": "^20.1.0",
+    "@angular/compiler": "^20.1.0",
+    "@angular/compiler-cli": "^20.1.0",
+    "@angular/core": "^20.1.0",
     "@angular/forms": "^20.1.6-0",
-    "@supabase/supabase-js": "2",
+    "@angular/platform-browser": "^20.1.0",
+    "@angular/router": "^20.1.6-0",
     "@google/genai": "latest",
-    "uuid": "^11.1.0",
-    "crypto": "^1.0.1",
+    "@supabase/supabase-js": "2",
     "@vercel/node": "^5.3.22",
     "buffer": "^6.0.3",
-    "@angular/build": "^20.1.0",
-    "@angular/cli": "^20.1.0",
-    "@angular/compiler-cli": "^20.1.0",
-    "tailwindcss": "latest"
+    "crypto": "^1.0.1",
+    "rxjs": "^7.8.2",
+    "tailwindcss": "latest",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
