--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "@supabase/supabase-js": "2",
     "@google/genai": "latest",
     "uuid": "^11.1.0",
-    "crypto": "^3.12.0",
+    "crypto": "3.12.0",
     "@vercel/node": "^5.3.22",
-    "buffer": "^6.0.3",
+    "buffer": "6.0.3",
     "@angular/build": "^20.1.0",
     "@angular/cli": "^20.1.0",
     "@angular/compiler-cli": "^20.1.0",
