--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/platform-browser": "^20.1.0",
     "@angular/common": "^20.1.0",
     "@angular/forms": "^20.1.6-0",
+    "@angular/cdk": "^20.2.5",
     "@supabase/supabase-js": "2",
     "@google/genai": "latest",
     "uuid": "^11.1.0",
